feat: add graphics in ewviews block + styles (mobile and tablet) + tests

--- a/source/index.html
+++ b/source/index.html
@@ -814,123 +814,145 @@
 
     <section class="faq" data-test="FAQ">
       <div class="faq__main-wrapper">
-      <h2 class="faq__title">Вопросы и ответы</h2>
-      <div class="faq__accordion">
-        <div class="faq__accordion-item">
-          <h3 class="faq__accordion-title">Кто организатор? Какие сроки у программы?</h3>
-          <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа
-              на вопрос</span></button>
-          <p>Организатором программы является проект «Стажировка» в сотрудничестве с образовательными учреждениями.
-            Сроки программы обмена могут варьироваться от одного семестра до года.</p>
-        </div>
+        <h2 class="faq__title">Вопросы и ответы</h2>
+        <div class="faq__accordion">
+          <div class="faq__accordion-item">
+            <h3 class="faq__accordion-title">Кто организатор? Какие сроки у программы?</h3>
+            <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                ответа
+                на вопрос</span></button>
+            <p>Организатором программы является проект «Стажировка» в сотрудничестве с образовательными учреждениями.
+              Сроки программы обмена могут варьироваться от одного семестра до года.</p>
+          </div>
 
-        <div class="faq__accordion-item">
-          <h3 class="faq__accordion-title">Что такое грант на обучение?</h3>
-          <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
-              ответа на
-              вопрос</span></button>
-          <p>Грант на обучение — это финансовая поддержка, которую предоставляет организатор программы обмена студентами
-            для оплаты учебных расходов.</p>
-        </div>
+          <div class="faq__accordion-item">
+            <h3 class="faq__accordion-title">Что такое грант на обучение?</h3>
+            <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                ответа на
+                вопрос</span></button>
+            <p>Грант на обучение — это финансовая поддержка, которую предоставляет организатор программы обмена
+              студентами
+              для оплаты учебных расходов.</p>
+          </div>
 
-        <div class="faq__accordion-item faq__accordion-item--active">
-          <h3 class="faq__accordion-title">Как определяется стоимость программы?</h3>
-          <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
-              ответа на
-              вопрос</span></button>
-          <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант
-            «Стажировка» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного
-            участия.</p>
-        </div>
+          <div class="faq__accordion-item faq__accordion-item--active">
+            <h3 class="faq__accordion-title">Как определяется стоимость программы?</h3>
+            <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                ответа на
+                вопрос</span></button>
+            <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант
+              «Стажировка» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля
+              личного
+              участия.</p>
+          </div>
 
-        <div class="faq__accordion-item">
-          <h3 class="faq__accordion-title">Признаётся ли учёба<br> в рамках проекта <br>для<br> дальнейшего обучения?</h3>
-          <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
-              ответа на
-              вопрос</span></button>
-          <p>Студенты, участвующие в проекте, могут использовать полученные знания и навыки в своей будущей
-            профессиональной деятельности или продолжить обучение в высших учебных заведениях. Кроме того, многие
-            университеты и колледжи предоставляют кредиты за участие в программе обмена студентами.</p>
-        </div>
+          <div class="faq__accordion-item">
+            <h3 class="faq__accordion-title">Признаётся ли учёба<br> в рамках проекта <br>для<br> дальнейшего обучения?
+            </h3>
+            <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                ответа на
+                вопрос</span></button>
+            <p>Студенты, участвующие в проекте, могут использовать полученные знания и навыки в своей будущей
+              профессиональной деятельности или продолжить обучение в высших учебных заведениях. Кроме того, многие
+              университеты и колледжи предоставляют кредиты за участие в программе обмена студентами.</p>
+          </div>
 
-        <div class="faq__accordion-item">
-          <h3 class="faq__accordion-title">Как выглядит полный процесс регистрации на программу «Стажировка»?</h3>
-          <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
-              ответа на
-              вопрос</span></button>
-          <p>Процесс регистрации на программу обмена включает выбор университета-партнера и программы обмена, общение с
-            координатором программы, заполнение заявления и предоставление необходимых документов, прохождение интервью,
-            оформление визы, жилья и страховки, обучение по безопасности за границей и подписание договора об участии в
-            программе. Подробнее можно узнать позвонив в центр.</p>
+          <div class="faq__accordion-item">
+            <h3 class="faq__accordion-title">Как выглядит полный процесс регистрации на программу «Стажировка»?</h3>
+            <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                ответа на
+                вопрос</span></button>
+            <p>Процесс регистрации на программу обмена включает выбор университета-партнера и программы обмена, общение
+              с
+              координатором программы, заполнение заявления и предоставление необходимых документов, прохождение
+              интервью,
+              оформление визы, жилья и страховки, обучение по безопасности за границей и подписание договора об участии
+              в
+              программе. Подробнее можно узнать позвонив в центр.</p>
+          </div>
         </div>
       </div>
-    </div>
     </section>
 
     <section class="reviews" data-test="reviews">
+      <div class="reviews__main-wrapper">
       <h2 class="reviews__title">Отзывы</h2>
       <div class="reviews__swiper swiper">
         <div class="reviews__swiper-wrapper swiper-wrapper">
           <div class="reviews__slide swiper-slide">
-            <div class="reviews__avatar-wrapper">
-              <picture>
-                <source width="490" height="682" type="image/webp"
-                  srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
+            <div class="reviews__slide-content-wrapper">
+              <div class="reviews__author-wrapper">
+              <div class="reviews__avatar-wrapper">
+                <picture>
+                  <source width="60" height="60" type="image/webp"
+                    srcset="img/reviews/review-1/lola-alex-avatar-mobile@1x.webp 1x, img/reviews/review-1/lola-alex-avatar-mobile@2x.webp 2x">
 
-                <img class="reviews__avatar" src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
-                  srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Лолы Алекс">
-              </picture>
+                  <img class="reviews__avatar" src="img/reviews/review-1/lola-alex-avatar-mobile@1x.png" width="60"
+                    height="60" srcset="img/reviews/review-1/lola-alex-avatar-mobile@2x.png" alt="Аватар Лолы Алекс">
+                </picture>
+              </div>
+              <h3 class="reviews__slide-title">Лола Алекс</h3>
+              </div>
+
+              <dl class="reviews__details">
+                <dt class="reviews__details-category reviews__details-category--program">Программа</dt>
+                <dd class="reviews__details-info">Masa Art Challenge</dd>
+
+                <dt class="reviews__details-category reviews__details-category--date">Дата</dt>
+                <dd class="reviews__details-info">Осень 2022</dd>
+              </dl>
+
+              <h4 class="reviews__slide-subtitle">Я могу с уверенностью сказать, что это был один из самых незабываемых
+                опытов в жизни!</h4>
+              <blockquote>Я рекомендую программу «Стажировка» всем студентам, желающим получить незабываемые
+                впечатления.
+                Сочетание
+                путешествий, общения и значимой работы действительно отличает её от других программ, и я чувствую
+                огромную
+                благодарность за предоставленную мне возможность.</blockquote>
             </div>
-            <h3 class="reviews__slide-title">Лола Алекс</h3>
-            <dl class="reviews__details">
-              <dt class="reviews__details-category">Программа</dt>
-              <dd class="reviews__details-data">Masa Art Challenge</dd>
-
-              <dt class="reviews__details-category">Дата</dt>
-              <dd class="reviews__details-data">Осень 2022</dd>
-            </dl>
-
-            <h4 class="reviews__slide-subtitle">Я могу с уверенностью сказать, что это был один из самых незабываемых
-              опытов в жизни!</h4>
-            <blockquote>Я рекомендую программа «Стажировка» всем студентам, желающим получить незабываемые впечатления.
-              Сочетание
-              путешествий, общения и значимой работы действительно отличает её от других программ, и я чувствую огромную
-              благодарность за предоставленную мне возможность.</blockquote>
           </div>
 
           <div class="reviews__slide swiper-slide">
-            <div class="reviews__avatar-wrapper">
-              <picture>
-                <source width="490" height="682" type="image/webp"
-                  srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
+            <div class="reviews__slide-content-wrapper">
+              <div class="reviews__avatar-wrapper">
+                <picture>
+                  <source width="60" height="60" type="image/webp"
+                    srcset="img/reviews/review-2/david-ivanov-avatar-tablet@1x.webp 1x, img/reviews/review-2/david-ivanov-avatar-tablet@2x.webp 2x">
 
-                <img class="reviews__avatar" src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
-                  srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Давида Иванова">
-              </picture>
+                  <img class="reviews__avatar" src="img/reviews/review-2/david-ivanov-avatar-tablet@1x.png" width="60"
+                    height="60" srcset="img/reviews/review-2/david-ivanov-avatar-tablet@2x.png" alt="Аватар Лолы Алекс">
+                </picture>
+              </div>
+
+              <h3 class="reviews__slide-title">Давид Иванов</h3>
+
+              <dl class="reviews__details">
+                <dt class="reviews__details-category reviews__details-category--program">Программа</dt>
+                <dd class="reviews__details-info">Volunteer Chance</dd>
+
+                <dt class="reviews__details-category reviews__details-category--date">Дата</dt>
+                <dd class="reviews__details-info">Лето 2022</dd>
+              </dl>
+
+              <h4 class="reviews__slide-subtitle">Благодаря опыту стажировки я узнал так много нового о себе
+                и об окружающем мире.</h4>
+              <blockquote>Каждый день был возможностью оказать ощутимое влияние на жизнь других людей. Я бы очень
+                рекомендовал эту волонтёрскую программу всем, кто ищет значимый и незабываемый опыт. Организация была
+                на высшем уровне. Для меня было честью быть частью такой удивительной инициативы.</blockquote>
             </div>
-            <h3 class="reviews__slide-title">Давид Иванов</h3>
-            <dl class="reviews__details">
-              <dt class="reviews__details-category">Программа</dt>
-              <dd class="reviews__details-data">Volunteer Chance</dd>
-
-              <dt class="reviews__details-category">Дата</dt>
-              <dd class="reviews__details-data">Лето 2022</dd>
-            </dl>
-
-            <h4 class="reviews__slide-subtitle">Благодаря опыту стажировки я узнал так много нового о себе
-              и об окружающем мире.</h4>
-            <blockquote>Каждый день был возможностью оказать ощутимое влияние на жизнь других людей. Я бы очень
-              рекомендовал эту волонтёрскую программу всем, кто ищет значимый и незабываемый опыт. Организация была
-              на высшем уровне. Для меня было честью быть частью такой удивительной инициативы.</blockquote>
           </div>
         </div>
-        <div class="reviews__buttons-container arrow">
-          <button class="reviews__button reviews__button--prev arrow__button arrow__button--prev swiper-button-prev"
-            type="button" aria-label="Кнопка переключения предыдущего слайда"></button>
-          <button class="reviews__button reviews__button--next arrow__button arrow__button--next swiper-button-next"
-            type="button" aria-label="Кнопка переключения следующего слайда"></button>
-        </div>
+
       </div>
+      <div class="reviews__scrollbar swiper-scrollbar"></div>
+      <div class="reviews__buttons-wrapper arrow">
+        <button class="reviews__button reviews__button--prev arrow__button arrow__button--prev swiper-button-prev"
+          type="button" aria-label="Кнопка переключения предыдущего слайда"></button>
+        <button class="reviews__button reviews__button--next arrow__button arrow__button--next swiper-button-next"
+          type="button" aria-label="Кнопка переключения следующего слайда"></button>
+      </div>
+    </div>
     </section>
 
     <section class="contacts" data-test="contacts">
