feat: add styles in reviews block on desktop + tests + refactor code

--- a/source/index.html
+++ b/source/index.html
@@ -876,83 +876,120 @@
 
     <section class="reviews" data-test="reviews">
       <div class="reviews__main-wrapper">
-      <h2 class="reviews__title">Отзывы</h2>
-      <div class="reviews__swiper swiper">
-        <div class="reviews__swiper-wrapper swiper-wrapper">
-          <div class="reviews__slide swiper-slide">
-            <div class="reviews__slide-content-wrapper">
-              <div class="reviews__author-wrapper">
-              <div class="reviews__avatar-wrapper">
-                <picture>
-                  <source width="60" height="60" type="image/webp"
-                    srcset="img/reviews/review-1/lola-alex-avatar-mobile@1x.webp 1x, img/reviews/review-1/lola-alex-avatar-mobile@2x.webp 2x">
+        <h2 class="reviews__title">Отзывы</h2>
+        <div class="reviews__swiper swiper">
+          <div class="reviews__swiper-wrapper swiper-wrapper">
+            <div class="reviews__slide swiper-slide">
+              <div class="reviews__slide-content-wrapper">
+                <div class="reviews__author-wrapper">
+                  <div class="reviews__avatar-wrapper">
+                    <picture>
+                      <source width="60" height="60" type="image/webp"
+                        srcset="img/reviews/review-1/lola-alex-avatar-mobile@1x.webp 1x, img/reviews/review-1/lola-alex-avatar-mobile@2x.webp 2x">
 
-                  <img class="reviews__avatar" src="img/reviews/review-1/lola-alex-avatar-mobile@1x.png" width="60"
-                    height="60" srcset="img/reviews/review-1/lola-alex-avatar-mobile@2x.png" alt="Аватар Лолы Алекс">
-                </picture>
+                      <img class="reviews__avatar" src="img/reviews/review-1/lola-alex-avatar-mobile@1x.png" width="60"
+                        height="60" srcset="img/reviews/review-1/lola-alex-avatar-mobile@2x.png"
+                        alt="Аватар Лолы Алекс">
+                    </picture>
+                  </div>
+                  <h3 class="reviews__slide-title">Лола Алекс</h3>
+                </div>
+
+                <dl class="reviews__details">
+                  <dt class="reviews__details-category reviews__details-category--program">Программа</dt>
+                  <dd class="reviews__details-info">Masa Art Challenge</dd>
+
+                  <dt class="reviews__details-category reviews__details-category--date">Дата</dt>
+                  <dd class="reviews__details-info">Осень 2022</dd>
+                </dl>
+
+                <h4 class="reviews__slide-subtitle">Я могу с уверенностью сказать, что это был один из самых
+                  незабываемых
+                  опытов в жизни!</h4>
+                <blockquote>Я рекомендую программу «Стажировка» всем студентам, желающим получить незабываемые
+                  впечатления.
+                  Сочетание
+                  путешествий, общения и значимой работы действительно отличает её от других программ, и я чувствую
+                  огромную
+                  благодарность за предоставленную мне возможность.</blockquote>
               </div>
-              <h3 class="reviews__slide-title">Лола Алекс</h3>
-              </div>
-
-              <dl class="reviews__details">
-                <dt class="reviews__details-category reviews__details-category--program">Программа</dt>
-                <dd class="reviews__details-info">Masa Art Challenge</dd>
-
-                <dt class="reviews__details-category reviews__details-category--date">Дата</dt>
-                <dd class="reviews__details-info">Осень 2022</dd>
-              </dl>
-
-              <h4 class="reviews__slide-subtitle">Я могу с уверенностью сказать, что это был один из самых незабываемых
-                опытов в жизни!</h4>
-              <blockquote>Я рекомендую программу «Стажировка» всем студентам, желающим получить незабываемые
-                впечатления.
-                Сочетание
-                путешествий, общения и значимой работы действительно отличает её от других программ, и я чувствую
-                огромную
-                благодарность за предоставленную мне возможность.</blockquote>
             </div>
-          </div>
 
-          <div class="reviews__slide swiper-slide">
-            <div class="reviews__slide-content-wrapper">
-              <div class="reviews__avatar-wrapper">
-                <picture>
-                  <source width="60" height="60" type="image/webp"
-                    srcset="img/reviews/review-2/david-ivanov-avatar-tablet@1x.webp 1x, img/reviews/review-2/david-ivanov-avatar-tablet@2x.webp 2x">
+            <div class="reviews__slide swiper-slide">
+              <div class="reviews__slide-content-wrapper">
+                <div class="reviews__author-wrapper">
+                  <div class="reviews__avatar-wrapper">
+                    <picture>
+                      <source width="60" height="60" type="image/webp"
+                        srcset="img/reviews/review-2/david-ivanov-avatar-tablet@1x.webp 1x, img/reviews/review-2/david-ivanov-avatar-tablet@2x.webp 2x">
 
-                  <img class="reviews__avatar" src="img/reviews/review-2/david-ivanov-avatar-tablet@1x.png" width="60"
-                    height="60" srcset="img/reviews/review-2/david-ivanov-avatar-tablet@2x.png" alt="Аватар Лолы Алекс">
-                </picture>
+                      <img class="reviews__avatar" src="img/reviews/review-2/david-ivanov-avatar-tablet@1x.png"
+                        width="60" height="60" srcset="img/reviews/review-2/david-ivanov-avatar-tablet@2x.png"
+                        alt="Аватар Лолы Алекс">
+                    </picture>
+                  </div>
+
+
+                  <h3 class="reviews__slide-title">Давид Иванов</h3>
+                </div>
+
+                <dl class="reviews__details">
+                  <dt class="reviews__details-category reviews__details-category--program">Программа</dt>
+                  <dd class="reviews__details-info">Volunteer Chance</dd>
+
+                  <dt class="reviews__details-category reviews__details-category--date">Дата</dt>
+                  <dd class="reviews__details-info">Лето 2022</dd>
+                </dl>
+
+                <h4 class="reviews__slide-subtitle">Благодаря опыту стажировки я узнал так много нового о себе
+                  и об окружающем мире.</h4>
+                <blockquote>Каждый день был возможностью оказать ощутимое влияние на жизнь других людей. Я бы очень
+                  рекомендовал эту волонтёрскую программу всем, кто ищет значимый и незабываемый опыт. Организация была
+                  на высшем уровне. Для меня было честью быть частью такой удивительной инициативы.</blockquote>
               </div>
+            </div>
+            <!-- ДОПОЛНИТЕЛЬНЫЙ СЛАЙД -->
+            <div class="reviews__slide swiper-slide">
+              <div class="reviews__slide-content-wrapper">
+                <div class="reviews__author-wrapper">
+                  <div class="reviews__avatar-wrapper">
+                    <picture>
+                      <source width="60" height="60" type="image/webp"
+                        srcset="img/reviews/review-2/david-ivanov-avatar-tablet@1x.webp 1x, img/reviews/review-2/david-ivanov-avatar-tablet@2x.webp 2x">
 
-              <h3 class="reviews__slide-title">Давид Иванов</h3>
+                      <img class="reviews__avatar" src="img/reviews/review-2/david-ivanov-avatar-tablet@1x.png"
+                        width="60" height="60" srcset="img/reviews/review-2/david-ivanov-avatar-tablet@2x.png"
+                        alt="Аватар Лолы Алекс">
+                    </picture>
+                  </div>
 
-              <dl class="reviews__details">
-                <dt class="reviews__details-category reviews__details-category--program">Программа</dt>
-                <dd class="reviews__details-info">Volunteer Chance</dd>
+                  <h3 class="reviews__slide-title">Леонид Кашин</h3>
+                </div>
 
-                <dt class="reviews__details-category reviews__details-category--date">Дата</dt>
-                <dd class="reviews__details-info">Лето 2022</dd>
-              </dl>
+                <dl class="reviews__details">
+                  <dt class="reviews__details-category reviews__details-category--program">Программа</dt>
+                  <dd class="reviews__details-info">Volunteer Chance</dd>
 
-              <h4 class="reviews__slide-subtitle">Благодаря опыту стажировки я узнал так много нового о себе
-                и об окружающем мире.</h4>
-              <blockquote>Каждый день был возможностью оказать ощутимое влияние на жизнь других людей. Я бы очень
-                рекомендовал эту волонтёрскую программу всем, кто ищет значимый и незабываемый опыт. Организация была
-                на высшем уровне. Для меня было честью быть частью такой удивительной инициативы.</blockquote>
+                  <dt class="reviews__details-category reviews__details-category--date">Дата</dt>
+                  <dd class="reviews__details-info">Осень 2021</dd>
+                </dl>
+
+                <h4 class="reviews__slide-subtitle">Благодаря опыту стажировки я нашел новую работу!</h4>
+                <blockquote>Каждый день был возможностью оказать ощутимое влияние на жизнь других людей. Я бы очень
+                  рекомендовал эту волонтёрскую программу всем, кто ищет значимый и незабываемый опыт. Организация была
+                  на высшем уровне. Для меня было честью быть частью такой удивительной инициативы.</blockquote>
+              </div>
             </div>
           </div>
         </div>
-
+        <div class="reviews__scrollbar swiper-scrollbar"></div>
+        <div class="reviews__buttons-wrapper arrow">
+          <button class="reviews__button reviews__button--prev arrow__button arrow__button--prev swiper-button-prev"
+            type="button" aria-label="Кнопка переключения предыдущего слайда"></button>
+          <button class="reviews__button reviews__button--next arrow__button arrow__button--next swiper-button-next"
+            type="button" aria-label="Кнопка переключения следующего слайда"></button>
+        </div>
       </div>
-      <div class="reviews__scrollbar swiper-scrollbar"></div>
-      <div class="reviews__buttons-wrapper arrow">
-        <button class="reviews__button reviews__button--prev arrow__button arrow__button--prev swiper-button-prev"
-          type="button" aria-label="Кнопка переключения предыдущего слайда"></button>
-        <button class="reviews__button reviews__button--next arrow__button arrow__button--next swiper-button-next"
-          type="button" aria-label="Кнопка переключения следующего слайда"></button>
-      </div>
-    </div>
     </section>
 
     <section class="contacts" data-test="contacts">
