feat: add styles in footer on mobile + tests

--- a/source/index.html
+++ b/source/index.html
@@ -1070,6 +1070,7 @@
   </main>
 
   <footer class="footer" data-test="footer">
+    <div class="footer__main-wrapper">
     <svg class="footer__logo-icon" width="52" height="52" viewBox="0 0 52 52" fill="none"
       xmlns="http://www.w3.org/2000/svg">
       <rect width="52" height="52" rx="26" fill="#fff" />
@@ -1111,9 +1112,12 @@
           <a class="footer__nav-link" href="#contacts">Контакты</a>
         </li>
       </ul>
+    </nav>
 
+      <div class="footer__rights-wrapper">
       <a class="footer__policy" href="#">Политика конфиденциальности</a>
       <p class="footer__rights">Стажировка © 2023 Все права защищены</p>
+    </div>
 
       <ul class="footer__social-list social-list">
         <li class="social-list__item">
@@ -1129,8 +1133,8 @@
             rel="noopener noreferrer"><span class="visually-hidden">Мы в Reddit</span></a>
         </li>
       </ul>
-    </nav>
 
+  </div>
   </footer>
 
   <svg style="display: none">
